--- a/.gitignore
+++ b/.gitignore
@@ -82,8 +82,10 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
+.nv
 .env
 .venv
+nv
 env/
 venv/
 ENV/
@@ -102,3 +104,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# specific
+src/fileviewer/secrets.py
